tests/compile_fail/mongo_invalid_type.stderr
error: FieldWitnesses only works with structs
 --> tests/compile_fail/mongo_invalid_type.rs:6:48
  |
6 | #[derive(Debug, Clone, Serialize, Deserialize, FieldWitnesses, MongoComparable)]
  |                                                ^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FieldWitnesses` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc-macro derive panicked
 --> tests/compile_fail/mongo_invalid_type.rs:6:64
  |
6 | #[derive(Debug, Clone, Serialize, Deserialize, FieldWitnesses, MongoComparable)]
  |                                                                ^^^^^^^^^^^^^^^
  |
  = help: message: DeriveMongoComparable only works on structs
